Changelog
=========

2.2-dev0 - (unreleased)
---------------------------

2.1 - (2021-04-03)
---------------------------
* Internal: Add doctests for fixed layout sync multi-adapter IFixedLayoutBlockSerializationSync
  [avoinea]

2.0 - (2021-04-02)
---------------------------
* Feature: Add "volto.blocks.fixed.layout" behavior with auto-sync support
  [avoinea]

1.0 - (2021-03-19)
------------------
* Blocks **@layout** endpoint
  [avoinea]