@@ -8,5 +8,6 @@
   <adapter factory=".sync.ExtendedFixedLayoutSync" name="group" />
   <adapter factory=".sync.ExtendedFixedLayoutSync" name="columnsBlock" />
   <adapter factory=".sync.ExtendedFixedLayoutSync" name="accordion" />
+  <adapter factory=".sync.ExtendedFixedLayoutSync" name="accordionPanel" />
 
 </configure>
